HelloUltraviolet/Fixtures/RejectedSource/Patterns/RecordPatternUnknownField/Expected.uv
//! Expected diagnostic metadata for the RecordPatternUnknownField rejected-source specimen.

expectedDiagnostic("E-SEM-2731", "rule.17.RecordPattern-UnknownField")
